<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Pulse Your Life</string>
    <string name="statistics_name">Statistics</string>
    <string name="about_name">About us</string>
    <string name="profile_name">Profile</string>
    <string name="register_name">Sign Up</string>
    <string name="login_name">Log in</string>
    <string name="login_hint_user">Email</string>
    <string name="login_hint_password">Password</string>
    <string name="main_donthaveacc">Don\'t have an account?</string>
    <string name="register_input_name">Full name</string>
    <string name="register_input_email">E-mail address</string>
    <string name="register_input_password">Password</string>
    <string name="register_input_confirmpassword">Confirm Password</string>
    <string name="profile_age">Age</string>
    <string name="profile_gender">Gender</string>
    <string name="profile_height">Height</string>
    <string name="profile_weight">Weight</string>
    <string name="profile_user_name">Name</string>
    <string name="profile_user_email">Email</string>
    <string name="nav_img_description">Profile image</string>
    <string name="nav_drawer_open" translatable="false">Open nav drawer</string>
    <string name="nav_drawer_close" translatable="false">Close nav drawer</string>
    <string name="register_error">Check your credentials and try again</string>
    <string name="auth_error">Authentication error</string>
    <string name="login_error">Please verify your credentials</string>
    <string name="logout">Logout</string>
    <string name="about_brandon" translatable="false">Brandon Prieto\nhttps://github.com/brandonp93</string>
    <string name="about_daniel" translatable="false">Daniel Moreno\nhttps://github.com/danielDaleman</string>
    <string name="about_david" translatable="false">David Vaca\nhttps://github.com/vdavid30</string>
    <string name="about_diego" translatable="false">Diego Borrero\nhttps://github.com/DxMortem</string>
    <string name="about_developersTitle">Development Team</string>
    <string name="about_description">With this project we want to help the people with the care of the them health, alert to the user about risk, signs and symthoms previous of a cardiovascular event.\n\nThe developers of the application we met an elderly who excercised several hours daily thinking that with these would maintain a good state of health. Unfortunately one day, they told us that he had been infarcted because he never monitored their heart rate while exercising, relatives was informed hours later, so this idea came up from a work team in response to the need to alert both, the patient and his familiars who are in a remote location.</string>
    <string name="about_rate">Rate us on the Google Play Store</string>
    <string name="Terapia" >Therapy</string>
    <string name="Diagnostico">Diagnostic</string>
  <string name="next_therapy">Next Therapy</string>
    <string name="nav_premium">Get Premium!</string>
</resources>
