<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_statistic"
            android:icon="@drawable/ic_statistic"
            android:title="@string/statistics_name"/>
        <item android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile_name"/>
        <item android:id="@+id/nav_about"
            android:icon="@drawable/ic_about"
            android:title="@string/about_name"/>
    </group>
    <item android:id="@+id/nav_logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/logout"/>

</menu>